# sni-icon

./: .qubesbuilder  Cargo.toml  run.execline  sni-icon.spec.in
src/: client.rs  lib.rs  names.rs  server.rs
src/client/: item.rs  menu.rs  watcher.rs
src/server/: item.rs  menu.rs  watcher.rs
