[package]
name = "sni-icon"
version = "0.1.0"
edition = "2021"
readme = "README.md"
keywords = ["StatusNotifierItem", "SNI", "Qubes", "Qubes OS", "Spectrum", "SpectrumOS", "Spectrum OS"]
repository = "git+https://github.com/DemiMarie/sni-icon.git"
description = """
StatusNotifierItem proxy for Qubes OS and Spectrum OS.
"""
categories = ["dbus", "Qubes", "Spectrum"]

license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9"
dbus-crossroads = "0.5.1"
bincode = "2.0.0-rc.1"
sha2 = "0.10.7"
tokio = { version = "1.29.1", features = ["io-std", "rt", "macros", "io-util"] }
dbus-tokio = { version = "0.7.6", features = ["dbus-crossroads"] }
futures-util = { version = "0.3.28", features = ["async-await", "async-await-macro", "alloc"], default-features = false }
futures-macro = "0.3.28"
