[package]
name = "sni-icon"
version = "0.1.0"
edition = "2021"
readme = "README.md"
keywords = ["StatusNotifierItem", "SNI", "Qubes", "Qubes OS", "Spectrum", "SpectrumOS", "Spectrum OS"]
repository = "git+https://github.com/DemiMarie/sni-icon.git"
description = """
StatusNotifierItem proxy for Qubes OS and Spectrum OS.
"""
categories = ["dbus", "Qubes", "Spectrum"]

license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = { version = "0.9", path = "vendor/dbus" }
dbus-crossroads = { version = "0.5.1", path = "vendor/dbus-crossroads" }
bincode = "1.3.3"
sha2 = "0.10.7"
tokio = { version = "1.29.1", features = ["io-std", "rt", "macros", "io-util"] }
dbus-tokio = { version = "0.7.6", features = ["dbus-crossroads"], path = "vendor/dbus-tokio" }
futures-util = { version = "0.3.28", features = ["async-await", "async-await-macro", "alloc"], default-features = false }
futures-macro = "0.3.28"
futures-channel = "*"
mio = "*"
serde = { version = "1.0.188", features = ["serde_derive"]}
socket2 = { version = "0.5.4" }
libdbus-sys = "0.2.5"
qubes-utils = { path = "vendor/qubes-utils-0.1.0" }
qubes-utils-sys = { path = "vendor/qubes-utils-sys-0.1.0" }

[patch.crates-io]
qubes-utils = { path = "vendor/qubes-utils-0.1.0" }
qubes-utils-sys = { path = "vendor/qubes-utils-sys-0.1.0" }
